--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "@react-google-maps/api": "^1.2.3",
     "bootstrap": "^4.3.1",
     "connected-react-router": "^6.4.0",
+    "google-map-react": "^1.1.4",
     "history": "^4.9.0",
     "hoist-non-react-statics": "^3.3.0",
     "immer": "^3.1.2",
     "invariant": "^2.2.4",
+    "leaflet": "^1.5.1",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "plop": "^2.3.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-leaflet": "^2.3.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
