--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "plop": "^2.3.0",
+    "rc-slider": "^8.6.11",
+    "rc-tooltip": "^3.7.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
@@ -23,11 +25,13 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-transition-group": "^4.0.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "styled-transition-group": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
