--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-google-maps/api": "^1.2.3",
     "bootstrap": "^4.3.1",
     "connected-react-router": "^6.4.0",
     "google-map-react": "^1.1.4",
@@ -11,7 +10,6 @@
     "hoist-non-react-statics": "^3.3.0",
     "immer": "^3.1.2",
     "invariant": "^2.2.4",
-    "leaflet": "^1.5.1",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "plop": "^2.3.0",
@@ -20,18 +18,14 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
-    "react-leaflet": "^2.3.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "react-transition-group": "^4.0.1",
-    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
-    "styled-components": "^4.2.0",
-    "styled-transition-group": "^2.0.0"
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
